tests/fixtures/ok/ReturnOk5.php
<?php

namespace ReturnOk5;

class A
{
	function test()
	{
	}
}


class B extends A
{
	function test(): ?int
	{
	}
}
